# boids-in-the-blue

./: .gitignore  .index.html.kate-swp  README.md  install.sh  install_plugin.sh  install_v11.sh  package_release.sh  project.json
boids-gnome-port/: extension.js  metadata.json
boids-web/: index.html
contents/config/: main.xml
contents/ui/: BoidDelegate.qml  config.qml  main.qml
contents/ui/code/: boids.js
cursorhelper/: CMakeLists.txt  plugin.cpp  qmldir
org.kde.plasma.boidsaquarium/: metadata.json
org.kde.plasma.boidsaquarium/contents/config/: main.xml
org.kde.plasma.boidsaquarium/contents/ui/: NumberInput.qml  config.qml  main.qml
org.kde.plasma.boidsaquarium/contents/ui/code/: boids.js
org.kde.plasma.boidsaquarium11/: metadata.json
org.kde.plasma.boidsaquarium11/contents/config/: main.xml
org.kde.plasma.boidsaquarium11/contents/ui/: BoidDelegate.qml  NumberInput.qml  config.qml  main.qml
org.kde.plasma.boidsaquarium11/contents/ui/code/: boids.js
